tests/typecheck/fail/mismatched_yield.gg
gn g() -> int {
    string c = "asdf";
    yield c;
}

fn main() -> int {
    return 0;
}
